# quackapi

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COMPOSABILITY.md  LICENSE  Makefile  README.md  app.sql  client_fanout.sql  compose.sql  compose_pg.sql  compose_realtime.sql  description.yml  di.sql  dispatch.sql  edges.md  edges_round5_draft.md  edges_round6_draft.md  extension_config.cmake  framework.sql  launch_server.sql  listener_ducktinycc.sql  middleware.sql  run.sh  run_fanout.sql  serve_background.sql  serve_brain.sql  serve_forever.sql  serve_ws.sql  sweep_fanout.sql  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  ci.yml
bench/: BENCH_HEADTOHEAD.md  fastapi_ref_duckdb.py  fastapi_ref_mem.py  run_bench.sh
bridges/from_x/: .gitignore  README.md
bridges/from_x/docs/: fixture_transcript.txt  fromfast.md  handler_bridge.md  pydantic_bridge.md  rails_bridge.md
bridges/from_x/extract/: extract_go_ir.sql  extract_node_ir.sql  extract_python_ir.sql  extract_ruby_ir.py
bridges/from_x/one_callers/: quack_from_fastapi.sh  quack_from_fastapi_core.sql
docs/: 00-parts-list.md  01-extension-toolbox.md  03-self-dispatch.md  AGENT_DRIVEN_DEVELOPMENT.md  AUTH_HARDENING_OPTIONS.md  AUTH_ORACLE_WIRING_RESULT.md  BACKLOG.md  CHRONICLE.md  COMMUNITY_EXT_PATH.md  FASTAPI_MOST_WANTED.md  FASTAPI_PARITY.md  FEATURE_GAP_MATRIX.md  FEATURE_STATUS.md  OUTBOUND_POST_PROBE.md  QUEUE.md  RETRY_INTEGRATION.md  ROADMAP_10M.md  SECURITY.md  STATUS.md  TEST_PLAN.md  V154_BUILD_CHECK.md  build_pdf.sh  community-page.md  curl_httpfs.md  fastapi-parity.md  from-fastapi.md  index.md  loc-reduction.md
docs/guide/: auth.md  coming-soon.md  groups.md  headers-cookies-redirects.md  openapi.md  policies.md  queue.md  request-bodies.md  routes-and-params.md  static-files.md  stream.md  table-api.md
docs/learning/: 00-reading-cpp-for-a-sql-engineer.md  01-what-a-duckdb-extension-actually-is.md  02-the-life-of-a-query.md  03-locks-connections-transactions.md  04-the-table-function-protocol.md  05-a-web-server-inside-a-database.md  06-the-build-system.md  07-parallel-scaling-inside-a-database.md  08-the-design-interview-drill.md  README.md
docs/proper-c-discovery/: 01-capi-path.md  02-cpp-path.md  03-routing-in-c-design.md
docs/reference/: ddl.md  functions.md
docs/research/: cpp_int_gate_verdict.md  instant-backend-rivals-2026-07-05.md  offboarder-dispatch-stress.md  offboarder-docs-src-matrix.md
docs/research/ddl-fleet-2026-07-02/: bq_databricks.md  clickhouse.md  gateways.md  hasura_postgrest.md  postgres_rls.md  scheduling_misc.md  snowflake.md
docs/research/fastapi-pain-2026-07-02/: 01-performance-async.md  02-pydantic-validation.md  03-di-testing-lifecycle.md  04-structure-boilerplate-openapi.md  05-production-ops-batteries.md  06-deliberate-tradeoffs-and-rivals.md  07-bolton-ecosystem.md
docs/specs/: ADMIN_UI_SPEC.md  CREATE_POLICY_AUTH_SPEC.md  MULTIPART_SPEC.md  OAUTH_SPEC.md  POLISH_OPS_SPEC.md  R1_REQUEST_SURFACE_SPEC.md  SESSION_CSRF_SPEC.md  SUBSCRIPTION_SPEC.md  TABLE_API_SPEC.md  TLS_SPEC.md  VALIDATION_DOCTRINE.md  WS_SPEC.md
examples/: proxy_curl_httpfs.sql
migrate/: COVERAGE.sql  README.md  migrate_fastapi.sql  run_migrate.sh
migrate/samples/: hard.py  simple.py  with_router.py
packaging/: description.yml
probes/: 5_open_txn.sql  6_di_setup_teardown.sql  8_write_throughput.sql  dispatch_local.sql  harbor_boot_9497.sql
readme_experiment/: staging_claude-sonnet-4-6.md  staging_gemini-2.5-flash.md  staging_grok-4.3.md
scripts/: embed_from_x_sql.py
src/: quackapi_auth.cpp  quackapi_batteries.cpp  quackapi_ddl.cpp  quackapi_extension.cpp  quackapi_from_x.cpp  quackapi_http_fetch.cpp  quackapi_openapi.cpp  quackapi_policy.cpp  quackapi_queue.cpp  quackapi_registry.cpp  quackapi_server.cpp  quackapi_stream.cpp  quackapi_table_api.cpp  quackapi_util.cpp
src/include/: quackapi_auth.hpp  quackapi_ddl.hpp  quackapi_extension.hpp  quackapi_from_x.hpp  quackapi_from_x_sql.hpp  quackapi_http_fetch.hpp  quackapi_openapi.hpp  quackapi_policy.hpp  quackapi_queue.hpp  quackapi_server.hpp  quackapi_state.hpp  quackapi_stream.hpp  quackapi_table_api.hpp  quackapi_util.hpp
src/sql/: quack_from_express_models.sql  quack_from_express_routes.sql  quack_from_fastapi_models.sql  quack_from_fastapi_routes.sql  quack_from_gin_models.sql  quack_from_gin_routes.sql  quack_from_rails_models.sql  quack_from_rails_routes.sql
test/: README.md  compose_cron_fire.sh  compose_realtime_fire.sh  compose_receipts.sh  di.test.sql  middleware.test.sql  parity_b2.sh  radio_probe.test.sql  retry_probe.test.sql  run_all.sh  tier1_handle_request.test.sql  tier2_http.sh
test/conformance/: CONFORMANCE_REPORT.md  README.md  cases.jsonl  driver.py  driver_pure.py  generate_report.py  reference_app.py  render_scorecard.py  results.jsonl  results_pure.jsonl  routes.sql  run.sh  run_conformance.sh  run_conformance_pure.sh
test/conformance/fastapi_mirror/: app.py
test/fuzz/: adversarial_http.sh  oracle_fuzz.test.sql  run_oracle_fuzz.sh
test/http/: auth.test.sh  batteries.test.sh  body.test.sh  body_schema.test.sh  compression.test.sh  cookies.test.sh  cors.test.sh  curl_httpfs_client.test.sh  empty_post.test.sh  fiveliner.test.sh  form.test.sh  group.test.sh  headers.test.sh  lib.sh  multipart.test.sh  policy.test.sh  queue.test.sh  redirect.test.sh  redoc.test.sh  routing.test.sh  run_all.sh  stream.test.sh  trailing_slash.test.sh  validation.test.sh
test/sql/: quackapi_auth.test  quackapi_batteries.test  quackapi_compression.test  quackapi_cors.test  quackapi_from_x_bridge.test  quackapi_from_x_native.test  quackapi_group.test  quackapi_http_util_name.test  quackapi_jwt_claims.test  quackapi_memory_limit.test  quackapi_openapi.test  quackapi_policy.test  quackapi_quack_bridge.test  quackapi_queue.test  quackapi_routes.test  quackapi_security.test  quackapi_stream.test  quackapi_table_api.test
test/sql/fixtures/: jwt_alg_hs384.txt  jwt_alg_none.txt  jwt_ctrl.txt  jwt_expired.txt  jwt_happy.txt  jwt_nbf_future.txt  jwt_nbf_past.txt  jwt_quote.txt
(+4 files in other folders)
